--- a/src/components/CollectionImage/CollectionImage.css
+++ b/src/components/CollectionImage/CollectionImage.css
@@ -2,27 +2,15 @@
 
 .collection-image {
   position: relative;
-  margin: calc(var(--baseline) * 1);
-  display: flex;
+  height: 100%;
+  padding: calc(var(--baseline) * 1);
 
-  cursor: pointer;
-
-  &__img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-height: 10rem;
-    overflow: hidden;
-
-    & > img {
+  &:hover {
+    & .ci-image__delete {
       display: block;
-      max-width: 100%;
     }
   }
 }
-  .collection-image--collected {
-    background: color(var(--color__green) alpha(-50%));
-  }
   .collection-image--selected {
     &:after {
       position: absolute;
@@ -31,10 +19,43 @@
 
       transform: rotateZ(45deg);
 
-      bottom: -1.5rem;
+      bottom: -0.75rem;
       left: 50%;
       margin-left: -0.5rem;
 
       background: var(--color__greyD);
     }
   }
+
+.ci-image {
+  cursor: pointer;
+  position: relative;
+
+  &__thumb {
+    overflow: hidden;
+    max-height: 10rem;
+
+    & img {
+      display: block;
+      max-width: 100%;
+    }
+  }
+
+  &__delete {
+    display: none;
+
+    cursor: pointer;
+
+    position: absolute;
+    top: -0.5rem;
+    right: -0.5rem;
+    width: 1rem;
+    height: 1rem;
+
+    border: none;
+    border-radius: 1px;
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+}
