--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,12 +1,23 @@
 @import '../../variables.css';
 
-.app {
+.App {
   height: 100vh;
+  display: flex;
 
   &__sidebar {
     height: 100%;
     width: calc(var(--baseline) * 32);
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 
-    border-right: 1px solid var(--color__greyL);
+    border-right: 1px solid color(var(--color__darkBlue) lightness(-7%));
+
+    overflow: hidden;
+  }
+
+  &__body {
+    flex: 1;
+    height: 100%;
   }
 }
