--- a/src/components/Timestamp/Timestamp.css
+++ b/src/components/Timestamp/Timestamp.css
@@ -1,6 +1,6 @@
 @import '../../variables.css';
 
-.timestamp {
+.Timestamp {
   width: 100%;
   padding: 0 calc(var(--baseline) * 0.75);
   position: relative;
@@ -11,7 +11,7 @@
     content: '';
     z-index: 1;
     top: 0; bottom: 50%;
-    left: calc(var(--baseline) * 0.75); right: calc(var(--baseline) * 0.75);
+    left: 0; right: 0;
 
     border-bottom: 1px solid var(--color__greyL);
   }
@@ -31,31 +31,5 @@
     color: var(--color__greyL);
 
     background: white;
-
-    cursor: pointer;
-
-    &:before {
-      content: '';
-      position: absolute;
-      z-index: 3;
-
-      width: 0; height: 0;
-      top: 50%; left: 0;
-      margin-top: -4px;
-
-      border-width: 4px;
-      border-style: solid;
-      border-color: transparent transparent transparent var(--color__greyM);
-
-      cursor: pointer;
-    }
   }
 }
-  .timestamp--selected {
-    /**/
-
-    & .timestamp__date:before {
-      margin-top: -2px;
-      border-color: var(--color__greyM) transparent transparent transparent;
-    }
-  }
