--- a/src/components/ImageGallery/ImageGallery.css
+++ b/src/components/ImageGallery/ImageGallery.css
@@ -8,16 +8,13 @@
 
   &__body {
     flex: 1;
+    padding-top: calc(var(--baseline) * 2);
     overflow: auto;
   }
 
-  &__actions {
-    padding:  calc(var(--baseline) * 1)
-              calc(var(--baseline) * 1.5);
-
-    font-size: 0.750rem;
-
-    border-top: 1px solid var(--color__greyL);
-    box-shadow: 0 0 20px color(var(--color__greyM) alpha(-50%));
+  &__header {
+    position: relative;
+    z-index: 10;
+    border-bottom: 1px solid color(var(--color__greyL));
   }
 }
