--- a/src/components/Timestamp/Timestamp.css
+++ b/src/components/Timestamp/Timestamp.css
@@ -3,18 +3,8 @@
 .Timestamp {
   width: 100%;
   padding: 0 calc(var(--baseline) * 0.75);
-  position: relative;
   font-size: 0;
-
-  &:before {
-    position: absolute;
-    content: '';
-    z-index: 1;
-    top: 0; bottom: 50%;
-    left: 0; right: 0;
-
-    border-bottom: 1px solid var(--color__greyL);
-  }
+  overflow: hidden;
 
   &__date {
     display: inline-block;
@@ -26,10 +16,30 @@
     z-index: 2;
 
     font-size: 0.750rem;
-    line-height: calc(var(--baseline) * 2);
+    line-height: calc(var(--baseline) * 3);
 
-    color: var(--color__greyL);
+    color: var(--color__greyM);
 
-    background: white;
+    &:before {
+      position: absolute;
+      content: '';
+      z-index: 1;
+      width: 10000px;
+      top: 0; bottom: 50%;
+      right: 100%;
+
+      border-bottom: 1px solid var(--color__greyL);
+    }
+
+    &:after {
+      position: absolute;
+      content: '';
+      z-index: 1;
+      width: 10000px;
+      top: 0; bottom: 50%;
+      left: 100%;
+
+      border-bottom: 1px solid var(--color__greyL);
+    }
   }
 }
