--- a/src/Layouts/Flex/Flex.css
+++ b/src/Layouts/Flex/Flex.css
@@ -2,4 +2,11 @@
   display: flex;
   width: 100%;
   height: 100%;
+
+  &__item {
+    /* ... */
+  }
+    &__item--main {
+      flex: 1;
+    }
 }
