--- a/src/components/GalleryImage/GalleryImage.css
+++ b/src/components/GalleryImage/GalleryImage.css
@@ -2,8 +2,17 @@
 
 .GalleryImage {
   position: relative;
-  height: 100%;
-  padding: calc(var(--baseline) * 1);
+  padding-top: 80%;
+
+  &__body {
+    position: absolute;
+    top: 0; left: 0;
+    bottom: 0; right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: calc(var(--baseline) * 3/4);
+  }
 
   &:hover {
     & .GI-image__checkbox {
@@ -30,32 +39,36 @@
     opacity: 0.2;
   }
   .GalleryImage--checked {
-    /* ... */
+    background: color(var(--color__green) alpha(-50%));
 
     & .GI-image__checkbox {
       opacity: 1;
     }
   }
 
+.GI-dummy {
+  height: 100%;
+  width: 100%;
+
+  background: color(var(--color__teal) alpha(-50%));
+}
+
 .GI-image {
   cursor: pointer;
   position: relative;
+  overflow: hidden;
+  max-height: 100%;
 
   &__thumb {
-    overflow: hidden;
-    max-height: 10rem;
-
-    & img {
-      display: block;
-      max-width: 100%;
-    }
+    display: block;
+    max-width: 100%;
   }
 
   &__checkbox {
     opacity: 0;
 
     position: absolute;
-    top: -calc(var(--baseline));
-    left: -calc(var(--baseline));
+    top: calc(var(--baseline) / 4);
+    left: calc(var(--baseline) / 4);
   }
 }
