--- a/src/components/ResolutionPicker/ResolutionPicker.css
+++ b/src/components/ResolutionPicker/ResolutionPicker.css
@@ -1,22 +1,19 @@
 @import '../../variables.css';
 
 .ResolutionPicker {
-  padding:  calc(var(--baseline) * 1)
-            calc(var(--baseline) * 1.5)
-            0
-            calc(var(--baseline) * 1.5);
+  /**/
 
   &__header {
-    font-size: 0.875rem;
-
-    font-weight: 600;
-
-    color: var(--color__greyD);
+    /**/
   }
 
-  &__info {
-    font-size: 0.750rem;
+  &__body {
+    padding:  calc(var(--baseline) * 1.5)
+              calc(var(--baseline) * 1.5);
+  }
 
-    color: var(--color__greyM);
+  &__name {
+    width: calc(var(--baseline) * 5);
+    text-align: right;
   }
 }
