--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -2,6 +2,7 @@
 
 .Slider {
   display: block;
+  padding-top: calc(var(--baseline) * 2/3);
   height: calc(var(--baseline) * 2);
   margin: 0 calc(var(--baseline) * 3.5);
 
@@ -19,16 +20,15 @@
   &__counter {
     position: absolute;
     z-index: 1;
-    width: calc(var(--baseline) * 3.5);
     top: calc(var(--baseline) / 2);
 
     font-size: 0.750rem;
-    line-height: calc(var(--baseline) * 1.5);
+    line-height: calc(var(--baseline) * 1.25);
 
-    color: white;
     text-align: center;
+    color: var(--color__greyM);
 
-    background:var(--color__greyDD);
+    background: white;
 
     &:before {
       position: absolute;
@@ -41,7 +41,7 @@
 
       border-width: calc(var(--baseline) * 0.5);
       border-style: solid;
-      border-color: var(--color__greyDD)
+      border-color: var(--color__greyM)
                     transparent
                     transparent
                     transparent;
@@ -49,10 +49,7 @@
   }
     &__counter--low {
       right: 0;
-      border-radius:  calc(var(--baseline) / 4)
-                      0
-                      calc(var(--baseline) / 4)
-                      calc(var(--baseline) / 4);
+      padding-right: calc(var(--baseline) / 4);
 
       &:before {
         right: -calc(var(--baseline) * 0.5);
@@ -61,10 +58,7 @@
     }
     &__counter--high {
       left: 0;
-      border-radius:  0
-                      calc(var(--baseline) / 4)
-                      calc(var(--baseline) / 4)
-                      calc(var(--baseline) / 4);
+      padding-left: calc(var(--baseline) / 4);
 
       &:before {
         left: -calc(var(--baseline) * 0.5);
