fixed checked images on filtering, filter previews

--- a/src/components/FilterPreview/FilterPreview.css
+++ b/src/components/FilterPreview/FilterPreview.css
@@ -49,6 +49,7 @@
   }
 
   &__type {
+    padding-right: calc(var(--baseline) * 0.25);
     font-size: 0.750rem;
     font-weight: 400;
     line-height: calc(var(--baseline) * 1.5);
