--- a/src/components/SelectedImageView/SelectedImageView.css
+++ b/src/components/SelectedImageView/SelectedImageView.css
@@ -1,22 +1,46 @@
 @import '../../variables.css';
 
-.selected-image-view {
+.SelectedImageView {
+  padding:  calc(var(--baseline) * 4)
+            calc(var(--baseline) * 2);
   min-height: 30rem;
   width: 100%;
-  padding: calc(var(--baseline) * 2);
-
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: stretch;
   justify-content: center;
 
   background: var(--color__greyDD);
 
-  &__img {
+  &__body {
     display: block;
-
-    & img {
-      max-width: 100%;
-      max-height: 100%;
-    }
   }
+
+  &__image {
+    display: block;
+    max-height: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+
+  &__title {
+    width: calc(var(--baseline) * 8);
+    text-align: right;
+    color: color(white alpha(-20%));
+  }
+
+  &__attr {
+    color: white;
+  }
+    &__attr--link {
+      text-decoration: underline;
+
+      transition-property: color;
+      transition-duration: 0.2s;
+
+      &:hover {
+        text-decoration: none;
+        color: color(white alpha(-10%));
+      }
+    }
 }
